--- a/mysite/Jenkinsfile
+++ b/mysite/Jenkinsfile
@@ -1,35 +1,74 @@
 pipeline {
-  agent any
-
-  environment {
-    DEPLOY_USER = 'vagrant'
-    DEPLOY_HOST = '192.168.56.23'
-    DEPLOY_DIR  = '/home/vagrant/django_git/mysite'
-    REPO_URL    = 'https://github.com/gyuseok-1316/django_test.git'
-    BRANCH      = 'main'
-    SSH_CRED_ID = 'deploy-ssh-key'   // Jenkins에 만든 credentials ID
-  }
-
-  stages {
-    stage('Checkout') {
-      steps {
-        checkout scm
-      }
+    agent any
+    
+    environment {
+        DOCKERHUB_CREDENTIALS = credentials('dockerhub')
+        DOCKERHUB_REPO = "ogs1316/djangoapp"
     }
 
-    stage('Run Remote Deploy') {
-      steps {
-        sshagent (credentials: [env.SSH_CRED_ID]) {
-          sh """
-            ssh -o StrictHostKeyChecking=no ${DEPLOY_USER}@${DEPLOY_HOST} 'bash -s' < mysite/scripts/deploy_remote.sh
-          """
+    triggers {
+        pollSCM('H/1 * * * *')   // GitHub webhook 사용 시 제거 가능
+    }
+
+    stages {
+
+        stage('Clone Repository') {
+            steps {
+                echo "Git Repo 최신 내용 가져오기"
+                checkout scm
+            }
         }
-      }
-    }
-  }
 
-  post {
-    success { echo "Deployment succeeded" }
-    failure { echo "Deployment failed" }
-  }
+        stage('Set Version') {
+            steps {
+                script {
+                    // Jenkins 빌드번호 기반 버전
+                    VERSION = "v${BUILD_NUMBER}"
+                    IMAGE_TAG = "${DOCKERHUB_REPO}:${VERSION}"
+
+                    echo "새 Docker 이미지 버전: ${IMAGE_TAG}"
+                }
+            }
+        }
+
+        stage('Docker Build') {
+            steps {
+                script {
+                    sh """
+                    docker build -t ${IMAGE_TAG} .
+                    """
+                }
+            }
+        }
+
+        stage('Docker Login') {
+            steps {
+                script {
+                    sh """
+                    echo "${DOCKERHUB_CREDENTIALS_PSW}" | docker login -u "${DOCKERHUB_CREDENTIALS_USR}" --password-stdin
+                    """
+                }
+            }
+        }
+
+        stage('Docker Push') {
+            steps {
+                script {
+                    sh """
+                    docker push ${IMAGE_TAG}
+                    """
+                }
+            }
+        }
+    }
+
+    post {
+        success {
+            echo "성공적으로 Docker Hub에 push 완료!"
+        }
+        failure {
+            echo "빌드 실패! 로그를 확인하세요."
+        }
+    }
 }
+
